src/index.css
:root {
  --primary-bg-color: #0e0b16;
  --secondary-bg-color: teal;
}
* {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.header {
  background-color: #0e0b16;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  /* height: 30px; */
}
.header-content {
  margin: 0px 200px 0px 200px;
  display: flex;
  justify-content: space-between;
  color: white;
  padding: 0px, 10px, 10px, 10px;
  /* max-width: 50%; */
}

.header-content > h3 {
  padding: 22px 0px 10px 0px;
  margin: 10px 0px 10px 0px;

  display: inline;
}

/* .content {
  overflow-y: scroll;
} */

.home {
  display: flex;
  background-color: var(--primary-bg-color);
  margin-top: 85px;
  /* height: 500px; */
  color: white;
  padding-bottom: 20px;
}
.personal {
  background-color: var(--primary-bg-color);
  flex: 1;
  height: 100%;
}
.biography {
  background-color: var(--primary-bg-color);
  flex: 2;
  height: 100%;
}

#profile {
  height: 300px;
  width: 300px;
  border-radius: 50%;
  margin: 30px 30px 0px 30px;
  overflow: hidden;
}

.personal > h2 {
  margin-top: 5px;
  margin-bottom: 0;
}

.personal > h3 {
  color: var(--secondary-bg-color);
  margin: 0;
}

#icons {
  display: flex;
  justify-content: space-between;
  margin: 5px 90px 0px 90px;
}
.icons-icon {
  width: 30px;
  height: 30px;
}

#bio,
#education {
  display: block;
  text-align: start;
}

.school > .info > p {
  margin: 0;
}
.school > .icon {
  float: left;
  margin-right: 20px;
}
.school > .icon > img {
  height: 30px;
  width: 30px;
  margin: 6px 0px;
}

/* Skills */
#skills {
  /* display: flex;
  justify-content: space-between; */
  /* height: 500px; */
  background-color: var(--secondary-bg-color);
  text-align: center;
}
.section-header {
  /* text-align: center; */
  margin: 0;
  padding: 20px;
}

#skills-desc {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
}
.skills-section > img {
  width: 100px;
}
/* PROJECTS */

#projects {
  display: block;
  justify-content: center;
  background-color: var(--primary-bg-color);

  /* height: 500px; */
  color: white;
  padding-bottom: 20px;
}
.project-card,
.project-card-reverse {
  border: 1px var(--secondary-bg-color) solid;
  border-radius: 20px;
  max-width: 70vw;
  /* height: 300px; */
  display: flex;
  margin: 0 auto;
  overflow: hidden;
  margin-bottom: 10px;
}
.project-card-reverse {
  flex-direction: row;
}

.card-left {
  flex: 1.5;
  overflow: hidden;
}
.card-right {
  flex: 2;
  text-align: center;
}
.project-image {
  height: 100%;
  width: 100%;
}

.tech-list {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  list-style-type: none;
  margin: 0 auto;
  padding: 0;
}
.tech {
  border: 1px white solid;
  margin: 5px;
  background-color: var(--secondary-bg-color);
}
.project-link-list {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  list-style-type: none;
  margin: 0 auto;
  padding: 0;
}
.project-link {
  border: 1px white solid;
  margin: 5px;
  background-color: var(--secondary-bg-color);
  cursor: pointer;
  color: white;
}
.project-link > a {
  text-decoration: none;
  color: white;
}

.project-link:hover {
  background-color: var(--primary-bg-color);
}

/* MUSIC */
#music {
  background-color: var(--secondary-bg-color);
}

#music-videos {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
}

.container {
  position: relative;
  margin: 5px;
}
.image {
  opacity: 1;
  display: block;
  width: 100%;
  height: auto;
  transition: 0.5s ease;
  backface-visibility: hidden;
}

.middle {
  transition: 0.5s ease;
  opacity: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  text-align: center;
}

.container:hover .image {
  opacity: 0.3;
}

.container:hover .middle {
  opacity: 1;
}

.text {
  background-color: #4caf50;
  color: black;
  font-size: 16px;
  padding: 16px 32px;
  text-decoration: none;
}

